# mkdesktop

./: .gitignore  Cargo.toml  LICENSE  Makefile  build.rs  mkdesktop.desktop
assets/: entry.glade  error-dialog.glade  list-entries.glade  new-entry.glade
libs/desktop-lib/: Cargo.toml
libs/desktop-lib/src/: gui.rs  lib.rs
libs/desktop_lib/: Cargo.toml
libs/desktop_lib/src/: desktop.rs
libs/mkdesktop-nautilus/: Cargo.toml
libs/mkdesktop-nautilus/src/: lib.rs
src/: cli.rs  desktop.rs  gui.rs  main.rs
