[package]
name = "mkdesktop"
version = "0.1.0"
authors = ["Nigel Baillie <metreckk@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
clap = "*"
path_abs = "*"
dirs = "*"
regex = "*"
lazy_static = "*"
gdk-pixbuf = "*"
glib = "*"
gio = "*"
inotify = "*"

[dependencies.gtk]
version = "*"
features = ["v3_16"]


[package.metadata.deb]
copyright = "2019, Nigel Baillie <metreckk@gmail.com>"
license-file = ["LICENSE", "3"]
extended-description = """\
A simple command-line and GUI utility for creating custom
desktop launchers."""
depends = "$auto, xdg-utils"
section = "utility"
priority = "optional"
assets = [
    ["target/release/mkdesktop", "usr/bin/", "755"],
    ["assets/icon.svg", "/usr/share/icons/hicolor/128x128/apps/mkdesktop.svg", "644"],
    ["mkdesktop.desktop", "usr/share/applications/", "644"],
]
